# pinguinOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.mk  configure.mk  mbr.S  toolchain-debug.cmake  toolchain-x86.cmake
boot/: mbr.S  mbr.ld  vbr.S  vbr.ld
boot/stage1/: CMakeLists.txt  Makefile  mbr.S  vbr.S
boot/stage2/: CMakeLists.txt  Makefile  bios_calls.S  bios_calls.h  build_config.h  compiler.h  detect_memory.c  detect_memory.h  entry.S  error.c  error.h  error_log.h  fat.c  fat.h  find_partition.c  find_partition.h  load_file.c  load_file.h  load_sectors.c  load_sectors.h  main.c  read_disk.c  read_disk.h  read_elf.c  read_elf.h  run_elf.c  run_elf.h  stage2.ld  stdio.c  stdio.h
core_lib/: CMakeLists.txt  Makefile  boot_params.h  compiler.h  elf.h  fat16.h  fat32.h  math.h  mbr.h  stdio.c  stdio.h  string.c  string.h  vga.c  vga.h
kernel/: CMakeLists.txt  Makefile  buildconfig.h  compiler.h  config.h  kernel.S  kernel.ld  log_boot_params.c  log_boot_params.h  main.c
kernel/arch/debug/: init.c  keyboard.c  keyboard.h  main.c  ps2_keyboard.c  vga.c
kernel/arch/x86/: bochs.h  config.h  gdt.c  gdt.h  idt.c  idt.h  idt_handlers.c  idt_handlers.h  init.c  io.h  isr.c  isr.h  pic.c  pic.h  ps2_keyboard.c  vga.c
kernel/drivers/: init.c  init.h  keyboard.h  keyboard_hook.c  keyboard_hook.h  ps2_keyboard.c  ps2_keyboard.h
kernel/libs/: kernel_log.c  kernel_log.h  kernel_panic.h  stdio.c  stdio.h
kernel/mem/: buddy.c  buddy.h  buddy_util.c  buddy_util.h  freelist.c  freelist.h  slab.c  slab.h  util.c  util.h
kernel/shell/: shell.c  shell.h
kernel_libs/: Makefile  README.md  elf.h  fat16.h  fat32.h  mbr.h  string_util.c  string_util.h  vga.c  vga.h
libs/: README.md  string_util.h  vga.h
mkimage/: mkimage_debug.sh  mkimage_x86.sh
tests/: CMakeLists.txt
tests/kernel/mem/: buddy_test.cpp  buddy_util_test.cpp  freelist_test.cpp  mem_test_util.cpp  mem_test_util.h  slab_test.cpp  util_test.cpp
